--- a/templates/desc.html
+++ b/templates/desc.html
@@ -17,6 +17,50 @@
         line-height: 1.15;
         }
 
+        .wrapper-buttons {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 250px;
+        }
+
+        .wrapper-buttons > * {
+        margin-bottom: 10px;
+        }
+
+        .wrapper-buttons > *:first-child {
+        margin-top: 10px;
+        }
+
+        .wrapper-buttons > *:last-child {
+        margin-bottom: 0px;
+        }
+
+        .white-button,
+        .blue-button {
+        display: inline-block;
+        font-family: Whitney, "Open Sans", Helvetica, sans-serif;
+        font-weight: 400;
+        font-size: 11pt;
+        border-radius: 3px;
+        cursor: pointer;
+        height: 45px;
+        width: 250px;
+        box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+        }
+
+        .blue-button {
+        background-color: #7289da;
+        border: 2px solid #7289da;
+        color: #fff;
+        }
+
+        .white-button {
+        background-color: #fff;
+        border: 2px solid #fff;
+        color: #000;
+        }
+
         .text {
         text-align: center;
         color: white
@@ -46,6 +90,9 @@
         <p>Bread Shop은 " Bread "를 거래할 수 있는 공간입니다.</p>
     </div>
 
-    
+    <div class="wrapper-buttons">
+        <a href='../index.html'><button class="white-button">이전 페이지</button></a>
+    </div>
+
 </body>
 </html>
