feat: overflow hidden (del scroll)

--- a/templates/desc.html
+++ b/templates/desc.html
@@ -68,7 +68,7 @@
 
     </style>
 </head>
-<body>
+<body style="overflow:hidden;"> <!-- 스크롤 없애는 코드, 삭제 금지-->
     <div class='text'>
         <h1>Bread Shop - 자세한 정보</h1>
     </div>
@@ -86,8 +86,7 @@
 
     <div class='text'>
         <h2>Bread Shop의 거래 물품</h2>
-        <p>우선, 코드를 " Bread "라고 부릅니다.</p>
-        <p>Bread Shop은 " Bread "를 거래할 수 있는 공간입니다.</p>
+        <p>일부 코드나 완성된 작품 등을 판매합니다.</p>
     </div>
 
     <div class="wrapper-buttons">
