feat: web server(Flask)

--- a/templates/desc.html
+++ b/templates/desc.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="wrapper-buttons">
-        <a href='../index.html'><button class="white-button">이전 페이지</button></a>
+        <a href='./index.html'><button class="white-button">이전 페이지</button></a>
     </div>
 
 </body>
