--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
 
 
     <div class="wrapper-buttons">
-        <a href='./templates/desc.html'><button class="white-button">Bread Shop 설명</button></a>
+        <a href='./desc.html'><button class="white-button">Bread Shop 설명</button></a>
     </div>
     <br>
 
