--- a/templates/order.html
+++ b/templates/order.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bread Shop - Order</title>
+
+    <style>
+        html,
+        body {
+        background: #26262b;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        line-height: 1.15;
+        }
+        
+        .txt {
+            text-align: center;
+            color: white
+        }
+    </style>
 </head>
 <body style="overflow:hidden;"> <!-- 스크롤 없애는 코드, 삭제 금지-->
     <form action="/post" method="post">
+        <div class='txt'>
+            <h1>Bread Shop - 주문 페이지</h1>
+        </div>
+
+        <br>
+
+        <div class='txt'>
+            <h2>빵의 종류</h2>
+            <p>1. 케이크 (주문 제작 등)</p>
+            <p>1. 빵 (일부 소스 코드 등)</p>
+        </div>
         <p>테스트 : <input type="text" name="test"></p>
         <input type="submit" value="정보 넘기기">
     </form>
