edit: bot main file

--- a/templates/order.html
+++ b/templates/order.html
@@ -15,7 +15,7 @@
         text-align: center;
         line-height: 1.15;
         }
-        
+
         .txt {
             text-align: center;
             color: white
@@ -32,11 +32,13 @@
 
         <div class='txt'>
             <h2>빵의 종류</h2>
-            <p>1. 케이크 (주문 제작 등)</p>
-            <p>1. 빵 (일부 소스 코드 등)</p>
+            <p>1. 케이크 (주문 제작 등 다수의 코드 파일)</p>
+            <p>2. 빵 (1개의 코드 파일)</p>
+            <p>3. 쿠키 (일정의 코드)</p>
         </div>
-        <p>테스트 : <input type="text" name="test"></p>
-        <input type="submit" value="정보 넘기기">
+        <div class='txt'>상품 종류와 원하는 기능을 자세히 작성해주세요.<br><input type="text" name="test"></div>
+        <input type="submit" value="제출하기">
+
     </form>
 </body>
 </html>
