feat: discord Oauth (2)

--- a/templates/order.html
+++ b/templates/order.html
@@ -36,7 +36,8 @@
             <p>2. 빵 (1개의 코드 파일)</p>
             <p>3. 쿠키 (일정의 코드)</p>
         </div>
-        <div class='txt'>상품 종류와 원하는 기능을 자세히 작성해주세요.<br><input type="text" name="test"></div>
+        <div class='txt'>상품 종류와 원하는 기능을 자세히 작성해주세요.<br><input type="text" name="applyorder"></div>
+        <br>
         <input type="submit" value="제출하기">
 
     </form>
