--- a/templates/done.html
+++ b/templates/done.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bread Shop - Order {{STATE}}</title>
+
+    <style>
+
+        html,
+        body {
+        background: #26262b;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        line-height: 1.15;
+        }
+
+        .txt {
+            text-align: center;
+            color: white
+        }
+    </style>
 </head>
-<body>
+<body style="overflow:hidden;"> <!-- 스크롤 없애는 코드, 삭제 금지-->
     
+    <div class='txt'>
+        <h1>Bread Shop - Order {{STATE}}</h1>
+        <br>
+        <h2>{{S}}</h2>
+    </div>
+
 </body>
 </html>
