edit: some route

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
     <br>
 
     <div class="wrapper-buttons">
-        <a href='https://discord.gg/hSmcG99KAk'><button class="blue-button">빵 주문하기</button></a>
+        <a href='/oauth2'><button class="blue-button">빵 주문하기</button></a>
     </div>
 
 </body>
